--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    image: parrotstream/hadoop:latest
+    image: comchangs/hadoop:latest
     external_links:
     - zookeeper
     ports:
@@ -19,4 +19,4 @@ services:
 networks:
   default:
     external:
-      name: parrot_default
+      name: comchangs
